--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require": {
         "php": ">=5.3.0",
         "jtl/core": "dev-master",
-        "jtl/connector": "dev-tree-model",
+        "jtl/connector": "dev-master",
         "twig/twig": "1.*",
         "twig/extensions": "1.*"
     },
