--- a/build.xml
+++ b/build.xml
@@ -3,9 +3,17 @@
     <target name="build">
         <delete dir="./dist" />
         <mkdir dir="./dist" />
+        <mkdir dir="./dist/logs" />
         <mkdir dir="./dist/config" />
+        <copy todir="./dist">
+            <fileset dir=".">
+                <include name="db/" />
+                <include name="install/" />
+            </fileset>
+        </copy>
         <copy todir="./dist/config">
             <fileset dir="./config">
+                <include name="config.json" />
                 <include name="config.dist.json" />
                 <include name="features.json" />
             </fileset>
@@ -15,7 +23,6 @@
         <mkdir dir="./build" />
         <copy todir="./build">
             <fileset dir=".">
-                <include name="install/" />
                 <include name="src/" />
                 <include name="vendor/" />
                 <include name="index.php" />
@@ -24,7 +31,6 @@
     </target>
 
     <target name="package" depends="build">
-        <delete file="./dist/index.php" />
         <pharpackage
             destfile="./dist/index.phar"
             basedir="./build"
