--- a/app/code/community/Jtl/Connector/composer.json
+++ b/app/code/community/Jtl/Connector/composer.json
@@ -23,10 +23,10 @@
     "require": {
         "php": ">=5.3.0",
         "jtl/connector": "dev-master",
-        "twig/twig": "1.*",
-        "twig/extensions": "1.*"
+        "twig/twig": "~1.18",
+        "twig/extensions": "~1.2"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "jtl\\Connector\\Magento\\": "src/"
