Set minimum-stability = dev while developing

--- a/app/code/community/Jtl/Connector/composer.json
+++ b/app/code/community/Jtl/Connector/composer.json
@@ -26,7 +26,7 @@
         "twig/twig": "~1.18",
         "twig/extensions": "~1.2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "jtl\\Connector\\Magento\\": "src/"
