--- a/app/code/community/Jtl/Connector/composer.json
+++ b/app/code/community/Jtl/Connector/composer.json
@@ -22,11 +22,12 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "jtl/connector": "dev-master"
+        "jtl/connector": "~1.0"
     },
     "autoload": {
         "psr-4": {
-            "jtl\\Connector\\Magento\\": "src/"
+            "jtl\\Connector\\Magento\\": "src/",
+            "": "plugins/"
         }
     }
 }
