Add default value for developer_logging in config.json

--- a/app/code/community/Jtl/Connector/config/config.json
+++ b/app/code/community/Jtl/Connector/config/config.json
@@ -1,4 +1,5 @@
 {
     "platform_root": "\/var",
-    "connector_root": "\/var\/www"
+    "connector_root": "\/var\/www",
+    "developer_logging": false
 }
